Small changes and bugs fixing